--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/MTheme.PHA"
         tools:targetApi="31">
         <activity
+            android:name=".DoctorSearch"
+            android:exported="false" />
+        <activity
             android:name=".AddRecord"
             android:exported="false" />
         <activity
