--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/MTheme.PHA"
         tools:targetApi="31">
+
+        <activity
+            android:name=".DoctorSearch"
+            android:configChanges="orientation"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+
+
         <activity
             android:name=".AddRecord"
             android:exported="false" />
